PROJECT(Charts)

FIND_PACKAGE(VTK REQUIRED)
IF(NOT VTK_USE_RENDERING)
  MESSAGE(FATAL_ERROR "Example ${PROJECT_NAME} requires VTK_USE_RENDERING.")
ENDIF(NOT VTK_USE_RENDERING)
INCLUDE(${VTK_USE_FILE})

ADD_EXECUTABLE(DiagramAPI DiagramAPI.cxx)
TARGET_LINK_LIBRARIES(DiagramAPI vtkRendering vtkCharts)

# If QVTK is present then build our chart example
IF(VTK_USE_QVTK)
  FIND_PACKAGE(Qt4 REQUIRED)
  INCLUDE(${QT_USE_FILE})
  INCLUDE_DIRECTORIES(${QT_INCLUDE_DIR})

  ADD_EXECUTABLE(QChartTable QChartTable.cxx)
  TARGET_LINK_LIBRARIES(QChartTable
    QVTK
    ${QT_LIBRARIES}
    vtkRendering
    vtkCharts
  )
ENDIF(VTK_USE_QVTK)

